--- a/bio.html
+++ b/bio.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bio-Data</title>
   <link rel="stylesheet" href="styles.css">
+  <background bg color="sky blue">
 </head>
 <body>
   <header>
