--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
   </header>
   
   <section class="bio-content">
-   <center><h1>Amogh's Bio-Data</h1></center><br>
+   <center><h1>Amogh's Bio-Data</h1><br>
     
     <h2>Personal Details</h2>
     <p><strong>Name:</strong> Amogh hl</p>
@@ -44,7 +44,7 @@
 
   <footer>
     <p>&copy; 2024 Your Name. All rights reserved.</p>
-  </footer>
+  </footer></center>
 
   <script src="script.js"></script>
 </body>
