--- a/bio.html
+++ b/bio.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bio-Data</title>
   <link rel="stylesheet" href="styles.css">
-  <img src="iyengar.jpg" alt="Sample Image">
+  <img src="amogh1.jpg" alt="Sample Image">
 </head>
 <body>
   <header>
